added some python analysis and integrate it to docker
